Fix example.env and requirements.txt

--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
-smtp_server = "smtp.gmail.com"
-smtp_port = 587
-sender_email = "aabbcb@gmail.com"
-receiver_email = "aabbcb@gmail.com"
-smtp_username = "aabbcb@gmail.com"
-smtp_password = "your gmail password (you better use an app password, look for it \
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SENDER_EMAIL=example@gmail.com
+RECEIVER_EMAIL=example@gmail.com
+SMTP_USERNAME=example@gmail.com
+SMTP_PASSWORD=your gmail password (you better use an app password, look for it \
                 in myaccount.google.com and in Security go to 2-Step-Verification \
-                you'll receive some random letters as password at the end)"
+                you'll receive some random letters as password at the end)
